Fixed warning that MaxPermSize is no more supported in Java8