@@ -40,7 +40,7 @@
 		<main.basedir>${project.parent.basedir}</main.basedir>
 		<scala.version>2.11.8</scala.version>
 		<scala.binary.version>2.11</scala.binary.version>
-		<scalatest.jvm.opts>-ea -Xms768m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m</scalatest.jvm.opts>
+		<scalatest.jvm.opts>-ea -Xms768m -Xmx1024m -XX:PermSize=128m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=512m</scalatest.jvm.opts>
 	</properties>
 
 	<dependencyManagement>
@@ -292,7 +292,7 @@
 						<jvmArg>-Xms768m</jvmArg>
 						<jvmArg>-Xmx1024m</jvmArg>
 						<jvmArg>-XX:PermSize=128m</jvmArg>
-						<jvmArg>-XX:MaxPermSize=512m</jvmArg>
+						<jvmArg>-XX:MaxMetaspaceSize=512m</jvmArg>
 						<jvmArg>-XX:ReservedCodeCacheSize=512m</jvmArg>
 					</jvmArgs>
 				</configuration>
